--- a/index.html
+++ b/index.html
@@ -823,22 +823,22 @@
         <div class="container">
             <div class="box">
                 <i class="far fa-user fa-2x fa-fw"></i>
-                <span class="number" data-goal="300">0</span>
+                <span class="number" data-goal="300">300</span>
                 <span class="text">Client</span>
             </div>
             <div class="box">
                 <i class="fas fa-code fa-2x fa-fw"></i>
-                <span class="number" data-goal="400">0</span>
+                <span class="number" data-goal="400">400</span>
                 <span class="text">Project</span>
             </div>
             <div class="box">
                 <i class="fas fa-globe-africa fa-2x fa-fw"></i>
-                <span class="number" data-goal="12">0</span>
+                <span class="number" data-goal="12">12</span>
                 <span class="text">Conutries</span>
             </div>
             <div class="box">
                 <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
-                <span class="number" data-goal="500">0</span>
+                <span class="number" data-goal="500">500k</span>
                 <span class="text">Money</span>
             </div>
         </div>
